--- a/Random/Stac.css
+++ b/Random/Stac.css
@@ -1,9 +1,9 @@
 .bg-blue {
-  background-color: #000d59;
+  background-color: #003155;
 }
 
 .nav-item:hover {
-  background-color: #00127a;
+  background-color: #004475;
 }
 
 .nav-item {
@@ -11,7 +11,7 @@
 }
 
 .dropdown-menu {
-  background-color: #000d59;
+  background-color: #003155;
   transition: 0.5s ease-out;
 }
 .dropdown-item {
