--- a/Random/Stac.css
+++ b/Random/Stac.css
@@ -1,6 +1,9 @@
 .bg-blue {
   background-color: #003155;
 }
+.bg-light-blue {
+  background-color: #e9ecef;
+}
 
 .nav-item:hover {
   background-color: #004475;
